25/5/24第一次提交

--- a/笔记/字符串.md
+++ b/笔记/字符串.md
@@ -5,3 +5,40 @@ print(stp)
 stu = stp.decode("utf-8")
 print(stu)
 ```
+
+### 字符串的常见操作
+
+```py
+#字符串查找
+Name = 'xiaoming'
+print(Name.find('m'))
+#4
+print(Name.find('i',2))
+#5
+```
+
+index 和find差不多，但是没有找到的话index会报错，find则会返回-1
+
+```py
+#count
+Name = "zhansangz"
+print(Name.count('z'))
+#2
+print(Name.count('z',2))
+```
+
+### #字符串判断
+
+```py
+Name = "zhansang"
+print(Name.startswith('z')) #True
+print(Name.startswith('z',2,5)) #False
+print(Name.endswith('z')) #False
+print(Name.isupper())#False
+```
+
+```py
+# #字符串替换
+Name = "zhansang"
+print(Name.replace('z','Z',1)) #Zhansang
+```
